ADD: Endpoint to retrieve available chats
